--- a/app/src/main/res/layout/loop_fragment.xml
+++ b/app/src/main/res/layout/loop_fragment.xml
@@ -2,23 +2,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.nightscout.androidaps.plugins.LowSuspend.LowSuspendFragment">
+    tools:context="info.nightscout.androidaps.plugins.Loop.LoopFragment">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView" >
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
+            android:layout_height="wrap_content">
+    
             <Button
-                android:id="@+id/lowsuspend_run"
+                android:id="@+id/loop_run"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/openapsma_run" />
-
+    
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -26,55 +27,28 @@
                 android:layout_margin="10dp"
                 android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
-
+        
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_lastrun_label"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
-
+        
                 <TextView
-                    android:id="@+id/lowsuspend_lastrun"
+                    android:id="@+id/loop_lastrun"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@color/linearBlockBackground"
-                android:orientation="vertical">
-
-                <TextView
+        
+               <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/openapsma_inputparameters_label"
+                    android:text="@string/openapsma_lastenact_label"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/openapsma_glucosestatus_label"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <TextView
-                    android:id="@+id/lowsuspend_glucosestatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/openapsma_minbg_label"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <TextView
-                    android:id="@+id/lowsuspend_minbg"
+                    android:id="@+id/loop_lastenact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -89,21 +63,28 @@
                 android:layout_margin="10dp"
                 android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
-
+        
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/openapsma_result_label"
+                    android:text="@string/loop_aps_label"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
-
+        
                 <TextView
-                    android:id="@+id/lowsuspend_result"
+                    android:id="@+id/loop_source"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
+        
+                <TextView
+                    android:id="@+id/loop_request"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+        
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -111,21 +92,45 @@
                 android:layout_margin="10dp"
                 android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
-
+        
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/openapsma_request_label"
+                    android:text="@string/loop_constrainsprocessed_label"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
-
+        
                 <TextView
-                    android:id="@+id/lowsuspend_request"
+                    android:id="@+id/loop_constrainsprocessed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
+        
             </LinearLayout>
-
+           <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:background="@color/linearBlockBackground"
+                android:orientation="vertical">
+        
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/loop_setbypump_label"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+        
+                <TextView
+                    android:id="@+id/loop_setbypump"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+        
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+
 </FrameLayout>
