--- a/app/src/main/res/layout/openapsma_fragment.xml
+++ b/app/src/main/res/layout/openapsma_fragment.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
-                android:background="#3e3d3d"
+                android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
 
                 <TextView
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="#3e3d3d"
+                android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
 
                 <TextView
@@ -126,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
-                android:background="#3e3d3d"
+                android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
 
                 <TextView
@@ -149,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
-                android:background="#3e3d3d"
+                android:background="@color/linearBlockBackground"
                 android:orientation="vertical">
 
                 <TextView
