menu, preferences, treatment&wizard buttons, ns upload
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/layout/openapsma_fragment.xml
+++ b/app/src/main/res/layout/openapsma_fragment.xml
@@ -14,11 +14,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/openapsma_run"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/openapsma_run" />
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/openapsma_run"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/openapsma_run" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
