--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -20,7 +20,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
-                android:textSize="60dp" />
+                android:textSize="80dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
