work on tempbasals
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/layout/tempbasals_item.xml
+++ b/app/src/main/res/layout/tempbasals_item.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/tempbasals_datelinearlayout">
 
             <TextView
                 android:id="@+id/tempbasals_date"
