--- a/app/src/main/res/layout/overview_newtempbasal_fragment.xml
+++ b/app/src/main/res/layout/overview_newtempbasal_fragment.xml
@@ -98,6 +98,7 @@
 
     <Button
         android:id="@+id/overview_newtempbasal_okbutton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
