--- a/app/src/main/res/layout/overview_newtreatment_fragment.xml
+++ b/app/src/main/res/layout/overview_newtreatment_fragment.xml
@@ -56,6 +56,7 @@
 
     <Button
         android:id="@+id/treatments_newtreatment_deliverbutton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OK"
